--- a/style.css
+++ b/style.css
@@ -1,89 +1,235 @@
-/* style.css
- * This file provides css styles.
- */
-
-body,html {
-	background-color: #3b4b54; width : 100%;
-	height: 100%;
-	margin: 0 auto;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	color: #ffffff;
+* {
+    margin:0; padding:0;
+    font-family:'helveticaneuemedium';
 }
 
-a {
-	text-decoration: none;
-	color: #00aed1;
+body {
+    position:absolute;
+    width:100%; height:100%;
+    min-height:600px;
+    min-width:400px;
+    overflow:none;
 }
 
-a:hover {
-	text-decoration: underline;
+a { text-decoration:none; color:inherit; }
+form { opacity:0; }
+
+/* -------------------- GENERIC ELEMENTS -------------------- */
+
+header {
+    position:fixed;
+    top:0px; left:0px;
+    width:100%; min-width:400px;
+    height:75px; min-height:75px;
+    background:#1E1E1E;
+    z-index:100;
 }
 
-.newappIcon {
-	padding-top: 10%;
-	display: block;
-	margin: 0 auto;
-	padding-bottom: 2em;
-	max-width:200px;
+.vCenter { position:absolute; top:50%; transform:translate(0, -50%); }
+#ixLogo { width:38px; height:26px; left:50px; }
+#ibmLogo { width:56px; height:23px; right:50px; }
+
+.greyBackground {
+    background:#323232;
 }
 
-h1 {
-	font-weight: bold;
-	font-size: 2em;
+.rOrR {
+    font-size:50px;
+    width:100%; text-align:center;
 }
 
-.leftHalf {
-	float: left;
-	background-color: #26343f;
-	width: 45%;
-	height: 100%;
+.touchToStart {
+    color:#FFF;
+    font-size:25px;
+    width:100%; text-align:center;
+    top:90%;
+    cursor:pointer;
 }
 
-.rightHalf {
-	float: right;
-	width: 55%;
-	background-color: #313f4a;
-	height: 100%;
-	overflow:auto;
+.mwcMix {
+    color:#FFF;
+    font-size:25px;
+    width:100%; text-align:center;
+    top:calc(75px + 10%);
+    cursor:pointer;
 }
 
-.description {
-	padding-left: 50px;
-	padding-right: 50px;
-	text-align: center;
-	font-size: 1.2em;
+#bgImage {
+    position:absolute;
+    width:100%; height:100%;
+    background:url('../images/splashBg.jpg') no-repeat center;
+    -webkit-background-size:cover;
+    -moz-background-size:cover;
+    -o-background-size:cover;
+    background-size:cover;
+    z-index:0;
+    opacity:0;
 }
 
-.blue {
-	color: #00aed1;
+.contentSection {
+    position:absolute;
+    width:100%; height:100%;
+    z-index:1;
+    opacity:0;
+    display:none;
 }
 
+#topPanel {
+    position:absolute;
+    top:75px;
+    height:100%;
+    width:100%;
+    background:#FFF;
+    color:#000;
+    font-size:60px;
+}
+#topPanel p:first-of-type {
+    padding-top:5%;
+}
+#bottomPanel {
+    position:absolute;
+    top:50%;
+    min-width:100%;
+    height:50%;
+}
+.optionChoose {
+    position:absolute;
+    top:calc(50% - 75px);
+    transform:translate(0, -150%);
+    width:100%;
+    text-align:center;
+    color:#4178BE;
+    font-size:20px;
+}
+.socialBtn {
+    position:absolute;
+    height:100%;
+    text-align:center;
+    width:calc(100% / 3);
+    color:#FFF;
+    overflow:hidden;
+    cursor:pointer;
+}
+.socialBtn #twitterBtn {
+    height:10%;
+}
+.socialBtn img {
+    position:absolute; top:40%;
+    transform:translate(-50%, -50%);
+}
+.socialBtn img {
+    position:absolute; top:40%;
+    transform:translate(-50%, -50%);
+}
+.socialBtn h2 {
+    position:absolute; 
+    width:100%; top:70%; left:50%;
+    transform:translate(-50%, -50%);
+}
+.socialBtn form {
+    position:absolute; 
+    width:90%; top:70%; left:50%;
+    transform:translate(-50%, -50%);
+    display:none;
+}
+.socialBtn form * {
+    margin:10px;
+    border:none;
+    border-radius:5px;
+    background:#FFF;
+    color:#777;
+    padding:10px;
+    font-size:25px;
+    width:25%;
+    min-width:100px;
+}
+.socialBtn form input[type=submit]{
+    background:rgba(255, 255, 255, 0);
+    color:#FFF;
+}
+#twitterBtn { background:#7CC7FF; left:0; }
+#linkedinBtn { background:#325C80; left:calc(100% / 3); }
+#emailBtn { background:#4178BE; right:0; }
 
-table {
-	table-layout: fixed;
-	width: 800px;
-	margin: 0 auto;
-	word-wrap: break-word;
-	padding-top:10%;
+
+/* -------------------- FRAME 04 - RESULTS PIE CHART -------------------- */
+
+#circleCanvas {
+    position:absolute;
+    top:calc(75px + ((100% - 75px) / 2));
+    left:50%;
+    transform:translate(-50%, -50%);
 }
 
-th {
-	border-bottom: 1px solid #000;
+#renagadeText {
+    position:absolute;
+    top:calc(75px + ((100% - 75px) / 2));
+    left:10%;
+    transform:translate(0, -200%);
+    color:#00b4a0;
+    font-size:40px;
 }
 
-th, td {
-	text-align: left;
-	padding: 2px 20px;
+#realistText {
+    position:absolute;
+    top:calc(75px + ((100% - 75px) / 2));
+    right:10%;
+    transform:translate(0, 100%);
+    color:#a7fae6;
+    font-size:40px;
 }
 
-.env-var {
-	text-align: right;
-	border-right: 1px solid #000;
-	width: 30%;
+.renRealPercentageText {
+    font-size:60px;
 }
 
-pre {
-	padding: 0;
-	margin: 0;
+/* -------------------- MEDIA QUERIES -------------------- */
+
+@media only screen and (max-width: 1000px) {
+    
 }
 
+@media only screen and (max-width: 600px) {
+    
+    #topPanel {
+        font-size:60px;
+    }
+    
+    .socialBtn {
+        position:relative;
+        float:none;
+        width:100%;
+        height:80%;
+    }
+    
+    #linkedinBtn { left:0; }
+    
+    .socialBtn form * {
+        width:80%;
+    }
+    
+    #renagadeText {
+        font-size:25px;
+        transform:translate(0, -240%);
+    }
+    
+    #realistText {
+        font-size:25px;
+        transform:translate(0, 140%);
+    }
+
+    .renRealPercentageText {
+        font-size:50px;
+    }
+}
+
+/* -------------------- EMBED FONTS -------------------- */
+
+@font-face {
+    font-family: 'helveticaneuemedium';
+    src: url('../fonts/helveticaneue_medium-webfont.woff2') format('woff2'),
+         url('../fonts/helveticaneue_medium-webfont.woff') format('woff'),
+         url('../fonts/helveticaneue_medium-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
